--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NewsApp</string>
+    <string name="web_client_id">748310810589-hoj6gbmnii60mavns91301gq6mgqeffc.apps.googleusercontent.com</string>
 </resources>
