--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NewsApp</string>
     <string name="web_client_id">748310810589-hoj6gbmnii60mavns91301gq6mgqeffc.apps.googleusercontent.com</string>
+    <string name="title_activity_sign_in">SignInActivity</string>
+    <string name="title_activity_main2">MainActivity2</string>
 </resources>
